# Aegis-Semantic-Router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  benchmark.py  config.py  config.yaml  docker-compose.yml  prompts.py  providers.py  pyproject.toml  requirements.txt  router.py  smoke_test_fireworks.py  verify_local.py
datasets/: benchmark.json  sample.json
static/: app.js  index.html  style.css
tests/: test_app.py  test_benchmark.py  test_config.py  test_provider.py  test_router.py
